feat: add create project endpoint
